--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap');
+
+body {
+    font-family: 'Nanum Gothic';
+}
+
 .login-container {
     position: absolute;
     top: 50%;
@@ -6,19 +12,90 @@
     transform: translate(-50%, -50%);
 }
 
+form {
+    margin: 0 0 2rem 0;
+}
+
 h1 {
     font-size: 2rem;
-    margin: 0 0 1rem 0;
+    margin: 0 0 2rem 0;
+    font-weight: 700;
+}
+
+label {
+    display: block;
+    margin: 0 0 10px 0;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 .email, .password {
     display: block;
-    margin: 0 0 1rem 0;
+    margin: 0 0 20px 0;
+    border: 1px solid #c2c2c2;
+    border-radius: 0.5rem;
     padding: 10px;
     width: 100%;
+    font-size: 1rem;
+}
+
+input:focus {
+    outline-color: #a44aff;
+}
+
+.password {
+    margin: 0 0 2rem 0;
 }
 
 .submit {
     width: 100%;
     padding: 10px;
+    border: 1px solid #a44aff;
+    border-radius: 0.5rem;
+    color: #fff;
+    background-color: #a44aff;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+
+#naver {
+    display: block;
+    width: 100%;
+    height: 41.5px;
+    margin: 0 0 0.5rem 0;
+    border-radius: 0.5rem;
+    background-color: #03C75A;
+}
+
+#kakao {
+    display: block;
+    width: 100%;
+    height: 41.5px;
+    margin: 0 0 0.5rem 0;
+    border-radius: 0.5rem;
+    background-color: #FEE500;
+}
+
+#normal {
+    display: block;
+    width: 100%;
+    height: 41.5px;
+    margin: 0 0 0.5rem 0;
+    border-radius: 0.5rem;
+    background-color: #4a4a4a;
+    color: #fff;
+}
+
+.new {
+    color: #969696;
+    font-size: 0.9rem;
+    text-align: right;
+}
+
+.submit:hover {
+    border: 1px solid #37016e;
+    background-color: #37016e;
+    transition: 0.3s ease;
 }
