--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,88 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap');
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Nanum Gothic';
+    background: linear-gradient(#a44aff, #ffffff);
+}
+
+#welcome-content {
+    display: flex;
+    justify-content: space-between;
+    height: 10rem;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fade-in-up 0.5s forwards;
+}
+
+@keyframes fade-in-up {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 0 0 2rem;
+}
+
+nav {
+    height: 10rem;
+    line-height: 10rem;
+    margin: 0 1rem 0 0;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+}
+
+nav > ul > li > a {
+    display: block;
+    padding: 0 2rem;    
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+#mypage, #logout {
+    display: none;
+}
+
+nav > ul > li > a:hover {
+    background-color: #a44aff;
+}
+
+.animate-up {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+h1 {
+    font-size: 5rem;
+    font-weight: 900;
+    margin: 0 0 0.5rem 0;
+    color: #fff;
+}
+
+p {
+    font-size: 1.5rem;
+    color: #fff;
+    font-weight: 900;
 }
 
 .index-container {
