--- a/public/css/index.css
+++ b/public/css/index.css
@@ -122,3 +122,26 @@ p {
     font-size: 2rem;
     cursor: pointer;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 20% auto;
+    padding: 20px;
+    width: 60%;
+}
+
+.close {
+    float: right;
+    cursor: pointer;
+}
