[Fix] refreshtoken logic edit

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -141,6 +141,18 @@ p {
     width: 60%;
 }
 
+.modal-content > h2 {
+    font-size: 2rem;
+}
+
+.modal-content > #name {
+    font-size: 1rem;
+}
+
+.modal-content > #email {
+    font-size: 1rem;
+}
+
 .close {
     float: right;
     cursor: pointer;
